WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
36246
Node::removeAllEventListenersSlowCase is declared but not used
https://bugs.webkit.org/show_bug.cgi?id=36246
Summary
Node::removeAllEventListenersSlowCase is declared but not used
Greg Bolsinga
Reported
2010-03-17 15:30:57 PDT
Node::removeAllEventListenersSlowCase is declared but not used. The declaration can safely be removed.
Attachments
Patch v1
(992 bytes, patch)
2010-03-17 21:57 PDT
,
David Kilzer (:ddkilzer)
sam
: review+
ddkilzer
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2010-03-17 21:57:52 PDT
Created
attachment 51006
[details]
Patch v1
David Levin
Comment 2
2010-03-17 22:35:42 PDT
I found it interesting to note that the method was removed in
r48701
(just not this declaration).
David Kilzer (:ddkilzer)
Comment 3
2010-03-18 01:57:05 PDT
Committed
r56152
: <
http://trac.webkit.org/changeset/56152
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug