<http://webkit.org/b/36246> Node::removeAllEventListenersSlowCase is declared but not used

Reviewed by Sam Weinig.

* dom/Node.h:
(WebCore::Node::removeAllEventListenersSlowCase): Removed
declaration.  Implementation was removed in r48701.

git-svn-id: svn://svn.chromium.org/blink/trunk@56152 bbb929c8-8fbe-4397-9dbb-9b2b20218538